--- a/src/hpc-web/src/main/resources/templates/permissionbulk.html
+++ b/src/hpc-web/src/main/resources/templates/permissionbulk.html
@@ -699,8 +699,7 @@
 						+ (rows) + '" name="permission' + (rows) + '" value="read" />';
 					cell5.innerHTML = '<input type="radio" id="permission_none'
 						+ (rows) + '" name="permission' + (rows) + '" value="none" />';
-					const escapedUserName = userNames[i].replace(/&/g, "&amp;").replace(/</g, "&lt;").replace(/>/g, "&gt;").replace(/"/g, "&quot;").replace(/'/g, "&#039;");
-					cell6.innerHTML = '<i class="fa fa-trash-o" aria-hidden="true" onClick="deleteUser(\'' + escapedUserName + '\')"></i>';
+					cell6.innerHTML = '<i class="fa fa-trash-o" aria-hidden="true" onClick="deleteUser(\'' + escapeHtml(userNames[i]) + '\')"></i>';
 				}
 				else if (addpermissionRead.checked == true)
 				{
@@ -713,7 +712,7 @@
 						+ '" value="read" checked="checked" />';
 					cell5.innerHTML = '<input type="radio" id="permission_none'
 						+ (rows) + '" name="permission' + (rows) + '" value="none" />';
-					cell6.innerHTML = '<i class="fa fa-trash-o" aria-hidden="true" onClick="deleteUser(\'' + userNames[i] + '\')"></i>';
+					cell6.innerHTML = '<i class="fa fa-trash-o" aria-hidden="true" onClick="deleteUser(\'' + escapeHtml(userNames[i]) + '\')"></i>';
 				}
 				else if (addpermissionNone.checked == true)
 				{
@@ -726,7 +725,7 @@
 						+ '" value="read" />';
 					cell5.innerHTML = '<input type="radio" id="permission_none'
 						+ (rows) + '" name="permission' + (rows) + '" value="none" checked="checked" />';
-					cell6.innerHTML = '<i class="fa fa-trash-o" aria-hidden="true" onClick="deleteUser(\'' + userNames[i] + '\')"></i>';
+					cell6.innerHTML = '<i class="fa fa-trash-o" aria-hidden="true" onClick="deleteUser(\'' + escapeHtml(userNames[i]) + '\')"></i>';
 				}
 	
 			}
