HPCDATAMGM-2080: Visually indicate soft linked data objects/collection on the Browse page

--- a/src/hpc-web/src/main/resources/static/css/style.css
+++ b/src/hpc-web/src/main/resources/static/css/style.css
@@ -5218,3 +5218,8 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+
+/* Soft link */
+img.softlink {
+	margin-left: 3px;
+}
