--- a/src/hpc-web/src/main/resources/templates/browse.html
+++ b/src/hpc-web/src/main/resources/templates/browse.html
@@ -92,7 +92,7 @@ app
 	      { field : 'name',
 	    	width: '50%',
 	        displayName : 'File Name',
-	        cellTemplate: '<div class="ui-grid-cell-contents folder" ng-if="row.entity.collection" ng-click="grid.appScope.openFolder(row.entity);" ><i class="fa fa-folder"></i>{{COL_FIELD CUSTOM_FILTERS}}<img class="softlink" ng-if="row.entity.softlink" src="img/link-hyperlink-icon.svg" width="13" title="A link in DME is a pointer to a file, similar to a UNIX soft link."/><div id="processingIcon{{row.entity.id}}" style="display:inline-block; visibility:hidden" class="loader"></div></div><div class="ui-grid-cell-contents file" ng-if="!row.entity.collection" >{{COL_FIELD CUSTOM_FILTERS}}<img class="softlink" ng-if="row.entity.softlink" src="img/link-hyperlink-icon.svg" width="13" title="Softlink"/></div>'
+	        cellTemplate: '<div class="ui-grid-cell-contents folder" ng-if="row.entity.collection" ng-click="grid.appScope.openFolder(row.entity);" ><i class="fa fa-folder"></i>{{COL_FIELD CUSTOM_FILTERS}}<img class="softlink" ng-if="row.entity.softlink" src="img/link-hyperlink-icon.svg" width="13" title="A link in DME is a pointer to a file, similar to a UNIX soft link."/><div id="processingIcon{{row.entity.id}}" style="display:inline-block; visibility:hidden" class="loader"></div></div><div class="ui-grid-cell-contents file" ng-if="!row.entity.collection" >{{COL_FIELD CUSTOM_FILTERS}}<img class="softlink" ng-if="row.entity.softlink" src="img/link-hyperlink-icon.svg" width="13" title="A link in DME is a pointer to a file, similar to a UNIX soft link."/></div>'
 	      },
 	      {
 	        field : 'fileSize',
