--- a/src/hpc-web/hpc-web-frontend/app/style.css
+++ b/src/hpc-web/hpc-web-frontend/app/style.css
@@ -10,6 +10,11 @@ body {
     overflow: hidden;
 }
 
+h3 {
+    font-family: 'Lato', sans-serif !important;
+    padding: 5px !important;
+}
+
 .footer {
     background-color: #1c5e86;
     line-height: 2;
@@ -28,6 +33,25 @@ body {
     left: 0;
     right: 0;
     z-index: 1002;
+}
+
+#container {
+    width: 100%;
+    height: 100%;
+}
+
+#main-content {
+    position: absolute;
+    top: 150px;
+    bottom: 0px;
+    overflow: auto;
+    width: 100%;
+}
+
+.wrapper {
+    display: inline-block;
+    padding: 15px;
+    width: 100%;
 }
 
 #appnavbar.navbar {
