HPCDATAMGM-2083: Enhance the DME web application to display files and directories on a remote NFS in a unified view

--- a/src/hpc-web/hpc-web-frontend/app/style.css
+++ b/src/hpc-web/hpc-web-frontend/app/style.css
@@ -283,6 +283,19 @@ ul.top-menu > li > a:hover, ul.top-menu > li > a:focus {
     padding-right: 10px
 }
 
+a.dropdown-item {
+    font-size: 14px;
+}
+
+.action-row {
+    width: 100%;
+}
+
+.form-control {
+    font-size: 14px;
+}
+
+
 .top-nav > li > a > i {
     display: inline-block;
     padding-right: 10px;
