--- a/src/hpc-web/src/main/resources/templates/downloadFragment.html
+++ b/src/hpc-web/src/main/resources/templates/downloadFragment.html
@@ -58,17 +58,17 @@
 <th:block th:fragment="globusDivFragment">
 	<div id="AsyncDiv" style="display: none">
 	    <div class="col-sm-12 column leftMargin">
-			<label for="endPointName">Globus Endpoint UUID:</label> 
+			<label for="endPointName" class="control-label col-sm-5">Globus Endpoint UUID:
 			<a id="downloadlink" 
 	                                    th:href="@{../download(type=${downloadType},source=${source},actionType=Globus,downloadFilePath=${downloadFilePath})}">                                  
-	                                    Obtain from Globus (Optional)</a>
+	                                    Obtain from Globus (Optional)</a></label>
 			<input type="hidden" name="actionType" id="actionType" />
 			<input
-				type="text" style="margin-top: 2px; margin-bottom: 10px;" class="form-control fieldWidth" name="endPointName" th:value="${endPointName}"
+				type="text" style="margin-top: 2px; margin-bottom: 10px;" class="form-control fieldWidth2" name="endPointName" th:value="${endPointName}"
 				id="endPointName" placeholder="Enter Globus Endpoint UUID" />
 		</div>
 		<div class="col-sm-12 column leftMargin">
-			<label for="endPointLocation">Endpoint Path:</label> 
+			<label for="endPointLocation" class="control-label col-sm-3">Endpoint Path:</label> 
 			<input
 				type="text" class="form-control fieldWidth"
 				th:value="${endPointLocation}"
@@ -81,17 +81,17 @@
 <th:block th:fragment="globusDivMultiFragment">
 	<div id="AsyncDiv" style="display: none">
 	    <div class="col-sm-12 column leftMargin">
-			<label for="endPointName">Globus Endpoint UUID:</label>
+			<label for="endPointName" class="control-label col-sm-2">Globus Endpoint UUID:</label>
 			<a id="downloadlink"
 				th:href="@{../downloadfiles(transferType=globus,downloadType=${downloadType})}">
                 Obtain from Globus (Optional)</a>
 			<input type="hidden" name="actionType" id="actionType" />
 			<input
-				type="text" style="margin-top: 2px; margin-bottom: 10px;" class="form-control fieldWidth" name="endPointName" th:value="${endPointName}"
+				type="text" style="margin-top: 2px; margin-bottom: 10px;" class="form-control fieldWidth2" name="endPointName" th:value="${endPointName}"
 				id="endPointName" placeholder="Enter Globus Endpoint UUID" />
 		</div>
 		<div class="col-sm-12 column leftMargin">
-			<label for="endPointLocation">Endpoint Path:</label> 
+			<label for="endPointLocation" class="control-label col-sm-3">Endpoint Path:</label> 
 			<input
 				type="text" class="form-control fieldWidth"
 				th:value="${endPointLocation}"
@@ -104,34 +104,34 @@
 <th:block th:fragment="awsBlock">		
 		<div id="s3Div" style="display: none;">
 			<div class="col-sm-12 column leftMargin">
-				<label for="bucketName">S3 Bucket:</label>
+				<label for="bucketName" class="control-label col-sm-3">S3 Bucket:</label>
 				<input
 					type="text" class="form-control" name="bucketName" th:value="${bucketName}"
 					id="bucketName" placeholder="Enter S3 Bucket Name" style="margin-top: 1px; margin-bottom: 10px; width:600px;" />
 			</div>
 			<div class="col-sm-12 column leftMargin">
-				<label for="s3Path">Endpoint Path:</label> <input
+				<label for="s3Path" class="control-label col-sm-3">Endpoint Path:</label> <input
 					type="text" class="form-control fieldWidth fieldMargin"
 					th:value="${s3Path}"
 					name="s3Path" id="s3Path"
 					placeholder="Enter S3 Endpoint Path" />
 			</div>
 			<div class="col-sm-12 column leftMargin">
-				<label for="accessKey">Access Key:</label> <input
+				<label for="accessKey" class="control-label col-sm-3">Access Key:</label> <input
 					type="text" class="form-control fieldWidth fieldMargin"
 					th:value="${accessKey}"
 					name="accessKey" id="accessKey"
 					placeholder="Enter Access Key" style="margin-top: 1px; margin-bottom: 10px; width:600px;"  />
 			</div>
 			<div class="col-sm-12 column leftMargin">
-				<label for="secretKey">Secret Access Key:</label> <input
+				<label for="secretKey" class="control-label col-sm-3">Secret Access Key:</label> <input
 					type="password" autocomplete="secret-access-key" class="form-control fieldWidth fieldMargin"
 					th:value="${secretKey}"
 					name="secretKey" id="secretKey"
 					placeholder="Enter Secret Access Key" />
 			</div>
 			<div class="col-sm-12 column leftMargin">
-				<label for="region">Region:</label> <input
+				<label for="region" class="control-label col-sm-3">Region:</label> <input
 					type="text" class="form-control fieldWidth"
 					th:value="${region}"
 					name="region" id="region"
@@ -144,7 +144,7 @@
 	<div th:if="${authorized != null}" class="alert-success" style="margin-top: 10px"><i class="fa fa-check">&nbsp;</i>Access Token successfully generated</div>
 	<br/>
 	<div class="col-sm-12 column leftMargin">
-		<label for="drivePath">Endpoint Path:</label>
+		<label for="drivePath" class="control-label col-sm-3">Endpoint Path:</label>
 		<a th:if="${authorized != null}" id="pickerLink" onclick="loadDownloadPicker()" style="cursor:pointer">
                                     Select from Google Drive (Optional)</a>
 		<input
@@ -159,14 +159,14 @@
 	<div th:if="${authorizedGC != null}" class="alert-success" style="margin-top: 10px"><i class="fa fa-check">&nbsp;</i>Access Token successfully generated</div>
 	<br/>
 	<div class="col-sm-12 column leftMargin">
-		<label for="googleCloudBucketName">Google Cloud Bucket</label>
+		<label for="googleCloudBucketName" class="control-label col-sm-3">Google Cloud Bucket</label>
 		<input
 			type="text" class="form-control fieldWidth" name="googleCloudBucketName" th:value="${googleCloudBucketName}"
 			id="googleCloudBucketName" placeholder="Enter Google Cloud Bucket Name" />
 	</div>
 	<br/>
 	<div class="col-sm-12 column leftMargin">
-		<label for="googleCloudPath">Endpoint Path:</label>
+		<label for="googleCloudPath" class="control-label col-sm-3">Endpoint Path:</label>
 		<input
 			type="text" class="form-control fieldWidth"
 			th:value="${googleCloudPath}"
@@ -182,7 +182,7 @@
 	<input type="hidden" name="boxContainerName" id="boxContainerName"
 		th:value="MyBox" />
 	<div class="col-sm-12 column leftMargin">
-		<label for="boxPath">Endpoint Path:</label>
+		<label for="boxPath" class="control-label col-sm-3">Endpoint Path:</label>
 		<input
 			type="text" class="form-control fieldWidth"
 			th:value="${boxPath}"
@@ -194,7 +194,7 @@
 <th:block th:fragment="asperaBlock">
 	<div id="asperaDiv" style="display: none;">
 		<div class="col-sm-12 column leftMargin">
-			<label for="asperaBucketName">Aspera Destination Directory:</label>
+			<label for="asperaBucketName" class="control-label col-sm-3">Aspera Destination Directory:</label>
 			<div th:if="${asperaBucketName == 'test'}" id="oneOption">
 				<select name="asperaBucketName" id="asperaBucketName" class="form-control fieldWidth fieldMargin">
 					<option th:value="test" th:text="test" selected="selected"></option>
@@ -208,7 +208,7 @@
 			</div>
 		</div>
 		<div class="col-sm-12 column leftMargin">
-			<label for="asperaUser">Aspera Account User:</label> <input
+			<label for="asperaUser" class="control-label col-sm-3">Aspera Account User:</label> <input
 				type="text" class="form-control fieldWidth fieldMargin"
 				th:value="${asperaUser}"
 				name="asperaUser" id="asperaUser"
@@ -217,14 +217,14 @@
 		<input type="hidden" name="asperaPath" id="asperaPath"
 				th:value="${asperaPath}" />
 		<div class="col-sm-12 column leftMargin">
-			<label for="asperaPassword">Aspera Account Password:</label> <input
+			<label for="asperaPassword" class="control-label col-sm-3">Aspera Account Password:</label> <input
 				type="password" autocomplete="secret-access-key" class="form-control fieldWidth  fieldMargin"
 				th:value="${asperaPassword}"
 				name="asperaPassword" id="asperaPassword"
 				placeholder="Enter Aspera Password" />
 		</div>
 		<div class="col-sm-12 column leftMargin">
-			<label for="asperaHost">Aspera Host:</label> <input
+			<label for="asperaHost" class="control-label col-sm-3">Aspera Host:</label> <input
 				type="text" class="form-control fieldWidth"
 				th:value="${asperaHost}"
 				name="asperaHost" id="asperaHost"
