HPCDATAMGM-2120: Change "link" to "soft link" in GUI.

--- a/src/hpc-web/src/main/resources/templates/dataobjectsearchresult.html
+++ b/src/hpc-web/src/main/resources/templates/dataobjectsearchresult.html
@@ -130,7 +130,7 @@
             {
                 field : 'link',
                 width : 150,
-                displayName : 'Create Link',
+                displayName : 'Create Soft Link',
                 cellFilter : 'dmePathEncoding',
                 cellTemplate : '<div class="ui-grid-cell-contents"><a id="downloadlink" class="btn btn-link btn-sm" href="../link?type=datafile&amp;linkFilePath={{COL_FIELD CUSTOM_FILTERS}}&amp;source={{grid.appScope.source}}"><i class="fa fa-link" aria-hidden="true"></i></a></div>',
                 exporterSuppressExport: true,
@@ -466,7 +466,7 @@
 										><i class="fa fa-users" title="Manage Permissions on Selected Data Files"></i></a>
 									<a data-toggle="modal" id="linksearchlink"
 										class="btn btn-link btn-sm" ng-click="linkSelectedRows()"
-										><i class="fa fa-link" title="Create Links for Selected Data Files"></i></a>
+										><i class="fa fa-link" title="Create Soft Links for Selected Data Files"></i></a>
 								</div>
 							  </div>
 								<div class="modal fade" id="saveModal" tabindex="-1" role="dialog"
