--- a/src/hpc-web/src/main/resources/templates/link.html
+++ b/src/hpc-web/src/main/resources/templates/link.html
@@ -57,7 +57,7 @@
 		  <div class="row">
 			<div class="col-lg-12">
 			  <h4>
-				<i class="fa fa-link"></i> Create Link
+				<i class="fa fa-link"></i> Create Soft Link
 			  </h4>
 		    </div>
 		  </div>
@@ -80,7 +80,7 @@
 
 
 			<div class="pull-center">
-			  <p>This page allows you to create a link to the destination location.</p>
+			  <p>This page allows you to create a soft link to the destination location.</p>
 			</div>
      
 			<div class="panel panel-default">
