--- a/src/hpc-web/src/main/resources/templates/linkfiles.html
+++ b/src/hpc-web/src/main/resources/templates/linkfiles.html
@@ -81,7 +81,7 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<h4>
-							<i class="fa fa-link"></i> Create Link
+							<i class="fa fa-link"></i> Create Soft Link
 						</h4>
 					</div>
 				</div>
@@ -99,7 +99,7 @@
 						<tr>
 							<td>
 							    <div class="pull-center" >
-							    <p>This page allows you to allows you to create link(s) to the destination location for the following selected data files.</p> 
+							    <p>This page allows you to allows you to create soft link(s) to the destination location for the following selected data files.</p> 
 							    </div>
 							</td>
 						</tr>
