HPCDATAMGM-2083: Changing label to External Archives

--- a/src/hpc-web/src/main/resources/templates/browse.html
+++ b/src/hpc-web/src/main/resources/templates/browse.html
@@ -462,7 +462,7 @@ cursor: pointer;
                     <div id="externalArchiveContent">
                       <span id="toggleExternalArchive">
                         <i class="glyphicon glyphicon-folder-open"></i>
-                        External Archive
+                        External Archives
                       </span>
                       <br/>
                       <div id="externalArchiveDiv"></div>
