--- a/src/hpc-web/src/main/resources/templates/updatemetadatabulk.html
+++ b/src/hpc-web/src/main/resources/templates/updatemetadatabulk.html
@@ -140,7 +140,7 @@
 													th:value="${bulkMetadataUpdateRequest.getSelectedFilePaths()}" />
 												 <input type="hidden"
 													class="form-control" name="globalMetadataSearchText" id="globalMetadataSearchText" th:value="${globalMetadataSearchText}"/>
-												<div class="form-group" th:if="${downloadType == 'collections'}">
+												<div class="form-group" th:if="${downloadType == 'collections' or downloadType == 'datafiles'}">
 												  <p th:if="${updateAll == 'true'}" th:text="'This page allows you to add or modify metadata on all search results. Total records affected: ' + ${totalCount}"></p>
 												  <p th:if="${updateAll != 'true'}">This page allows you to add or modify metadata for the selected collections.</p>
 													<table class="table table-bordered  col-md-12" id="metaAttrTable">
@@ -248,9 +248,13 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr id='attrCol0' th:each="pathDetail : ${pathDetails}">
+							<tr id='attrCol0' th:if="${downloadType == 'collections'}" th:each="pathDetail : ${pathDetails}">
 								<td id="path30"><a th:href="@{/collection(path=${pathDetail.path}, action=displayOnly)}"  th:text="${pathDetail.path}"  target="_blank"></a></td>
 								<td id='path31' th:if="${result} == 'true'" th:text="${pathDetail.result}"></td>
+							</tr>
+							<tr id='attrCol0' th:if="${downloadType == 'datafiles'}" th:each="pathDetail : ${pathDetails}">
+								<td id="path32"><a th:href="@{/datafile(path=${pathDetail.path}, action=view)}"  th:text="${pathDetail.path}"  target="_blank"></a></td>
+								<td id='path33' th:if="${result} == 'true'" th:text="${pathDetail.result}"></td>
 							</tr>
 						</tbody>
 					</table>
