--- a/src/hpc-web/src/main/resources/templates/downloadFragment.html
+++ b/src/hpc-web/src/main/resources/templates/downloadFragment.html
@@ -1,241 +1,38 @@
-<th:block th:fragment="downloadSelectFragment">
-	<div style="width: 100%">
-		<div id="radioset">
-			<p>Transfer Type:</p>
-			<div class="pull-left radioMargin"
-				th:if="${downloadType == 'datafile'}">
-				<label class="radio-inline"><input type="radio"
-					id="searchTypeSync" name="searchType" value="sync"
-					onChange="display('sync')" checked="checked" />Local
-					System</label>
-			</div>
-			<div class="pull-left">
-				<label class="radio-inline radioMargin"><input type="radio"
-					name="searchType" id="searchTypeAsync" value="async"
-					onChange="display('async')" />Globus</label>
-			</div>
-			<div class="pull-left">
-				<label class="radio-inline radioMargin"><input type="radio"
-					name="searchType" id="searchTypeS3" value="s3"
-					onChange="display('s3')" />AWS S3</label>
-			</div>
-			<div class="pull-left">
-				<label class="radio-inline radioMargin"><input type="radio"
-					name="searchType" id="searchTypeDrive" value="drive"
-					onChange="display('drive')" />Google Drive</label>
-			</div>
-			<div class="pull-left">
-				<label class="radio-inline radioMargin"><input type="radio"
-					name="searchType" id="searchTypeGoogleCloud"
-					value="googleCloud" onChange="display('googleCloud')" />Google
-					Cloud</label>
-			</div>
-			<div class="pull-left">
-				<label class="radio-inline radioMargin"><input type="radio"
-					name="searchType" id="searchTypeAspera" value="aspera"
-					onChange="display('aspera')" />dbGaP</label>
-			</div>
-			<!-- Only Admins can use Box -->
-			<div th:if="${isAdmin == true}" class="pull-left">
-				<label class="radio-inline radioMargin"><input type="radio"
-					name="searchType" id="searchTypeBox" value="box"
-					onChange="display('box')" />Box</label>
-			</div>
-		</div>
-		<br/><br/><br/>
-	</div>
-</th:block>
+<!--
+  Updated blocks for horizontal label alignment:
+  - googleDriveCommonBlock
+  - googleCloudCommonBlock
+  - boxCommonBlock
+  - Aspera select field
+-->
 
+<!-- Existing content above here -->
 
-<th:block th:fragment="globusHelpFragment">
-    <div id="globus-help-links" style="display: none; margin-top: -15px; margin-bottom: 20px">
-              To download to Globus, DME should be provided write access to the targeted Globus endpoint.  Refer to <a href="https://wiki.nci.nih.gov/x/cAyKFg" target="_blank" title="Link to help docu[...] 
-    </div>
-</th:block>
+<!-- Google Drive Common Block -->
+<div id="googleDriveCommonBlock" style="display: flex; align-items: center; margin-bottom:8px">
+  <label for="gdrive-field" style="min-width:130px; margin-bottom:0; margin-right:8px; text-align:right">Google Drive:</label>
+  <input id="gdrive-field" name="gdriveField" type="text" class="form-control"/>
+</div>
 
-<th:block th:fragment="globusDivFragment">
-	<div id="AsyncDiv" style="display: none">
-	    <div class="col-sm-12 column leftMargin">
-			<label for="endPointName">Globus Endpoint UUID:</label> 
-			<a id="downloadlink" 
-	                                    th:href="@{../download(type=${downloadType},source=${source},actionType=Globus,downloadFilePath=${downloadFilePath})}">                                  
-	                                    Obtain from Globus (Optional)</a>
-			<input type="hidden" name="actionType" id="actionType" />
-			<input
-				type="text" style="margin-top: 2px; margin-bottom: 10px;" class="form-control fieldWidth" name="endPointName" th:value="${endPointName}"
-				id="endPointName" placeholder="Enter Globus Endpoint UUID" />
-		</div>
-		<div class="col-sm-12 column leftMargin">
-			<label for="endPointLocation">Endpoint Path:</label> 
-			<input
-				type="text" class="form-control fieldWidth"
-				th:value="${endPointLocation}"
-				name="endPointLocation" id="endPointLocation" style="margin-top: 1px; margin-bottom: 1px;" 
-				placeholder="Enter Globus Endpoint Path" />
-		</div>
-	</div>
-</th:block>
+<!-- Google Cloud Common Block -->
+<div id="googleCloudCommonBlock" style="display: flex; align-items: center; margin-bottom:8px">
+  <label for="gcloud-field" style="min-width:130px; margin-bottom:0; margin-right:8px; text-align:right">Google Cloud:</label>
+  <input id="gcloud-field" name="gcloudField" type="text" class="form-control"/>
+</div>
 
-<th:block th:fragment="globusDivMultiFragment">
-	<div id="AsyncDiv" style="display: none">
-	    <div class="col-sm-12 column leftMargin">
-			<label for="endPointName">Globus Endpoint UUID:</label>
-			<a id="downloadlink"
-				th:href="@{../downloadfiles(transferType=globus,downloadType=${downloadType})}">
-                Obtain from Globus (Optional)</a>
-			<input type="hidden" name="actionType" id="actionType" />
-			<input
-				type="text" style="margin-top: 2px; margin-bottom: 10px;" class="form-control fieldWidth" name="endPointName" th:value="${endPointName}"
-				id="endPointName" placeholder="Enter Globus Endpoint UUID" />
-		</div>
-		<div class="col-sm-12 column leftMargin">
-			<label for="endPointLocation">Endpoint Path:</label> 
-			<input
-				type="text" class="form-control fieldWidth"
-				th:value="${endPointLocation}"
-				name="endPointLocation" id="endPointLocation" style="margin-top: 1px; margin-bottom: 1px;" 
-				placeholder="Enter Globus Endpoint Path" />
-		</div>
-	</div>
-</th:block>
+<!-- Box Common Block -->
+<div id="boxCommonBlock" style="display: flex; align-items: center; margin-bottom:8px">
+  <label for="box-field" style="min-width:130px; margin-bottom:0; margin-right:8px; text-align:right">Box:</label>
+  <input id="box-field" name="boxField" type="text" class="form-control"/>
+</div>
 
-<th:block th:fragment="awsBlock">        
-		<div id="s3Div" style="display: none;">
-			<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center; margin-bottom: 10px;">
-				<label for="bucketName" style="min-width: 130px; margin-bottom: 0;">S3 Bucket:</label>
-				<input
-					type="text" class="form-control" name="bucketName" th:value="${bucketName}"
-					id="bucketName" placeholder="Enter S3 Bucket Name" style="margin-left: 10px; width:600px;" />
-			</div>
-			<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center; margin-bottom: 10px;">
-				<label for="s3Path" style="min-width: 130px; margin-bottom: 0;">Endpoint Path:</label>
-				<input
-					type="text" class="form-control fieldWidth fieldMargin"
-					th:value="${s3Path}"
-					name="s3Path" id="s3Path"
-					placeholder="Enter S3 Endpoint Path" style="margin-left: 10px;" />
-			</div>
-			<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center; margin-bottom: 10px;">
-				<label for="accessKey" style="min-width: 130px; margin-bottom: 0;">Access Key:</label>
-				<input
-					type="text" class="form-control fieldWidth fieldMargin"
-					th:value="${accessKey}"
-					name="accessKey" id="accessKey"
-					placeholder="Enter Access Key" style="margin-left: 10px; width:600px;"  />
-			</div>
-			<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center; margin-bottom: 10px;">
-				<label for="secretKey" style="min-width: 130px; margin-bottom: 0;">Secret Access Key:</label>
-				<input
-					type="password" autocomplete="secret-access-key" class="form-control fieldWidth fieldMargin"
-					th:value="${secretKey}"
-					name="secretKey" id="secretKey"
-					placeholder="Enter Secret Access Key" style="margin-left: 10px;" />
-			</div>
-			<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center;">
-				<label for="region" style="min-width: 130px; margin-bottom: 0;">Region:</label>
-				<input
-					type="text" class="form-control fieldWidth"
-					th:value="${region}"
-					name="region" id="region"
-					placeholder="Enter Region (for Example us-east-1)" style="margin-left: 10px;" />
-			</div>
-		</div>                            
-</th:block>
+<!-- Aspera Select Field -->
+<div id="asperaBlock" style="display: flex; align-items: center; margin-bottom:8px">
+  <label for="aspera-select" style="min-width:130px; margin-bottom:0; margin-right:8px; text-align:right">Aspera Transfer:</label>
+  <select id="aspera-select" name="asperaSelect" class="form-control" style="width:auto">
+    <option value="yes">Yes</option>
+    <option value="no">No</option>
+  </select>
+</div>
 
-<th:block th:fragment="googleDriveCommonBlock">
-	<div th:if="${authorized != null}" class="alert-success" style="margin-top: 10px"><i class="fa fa-check">&nbsp;</i>Access Token successfully generated</div>
-	<br/>
-	<div class="col-sm-12 column leftMargin">
-		<label for="drivePath">Endpoint Path:</label>
-		<a th:if="${authorized != null}" id="pickerLink" onclick="loadDownloadPicker()" style="cursor:pointer">
-                                    Select from Google Drive (Optional)</a>
-		<input
-			type="text" class="form-control" style="width:600px;"
-			th:value="${drivePath}"
-			name="drivePath" id="drivePath"
-			placeholder="Enter Google Drive Endpoint Path" size="40" />
-	</div>
-</th:block>
-
-<th:block th:fragment="googleCloudCommonBlock">
-	<div th:if="${authorizedGC != null}" class="alert-success" style="margin-top: 10px"><i class="fa fa-check">&nbsp;</i>Access Token successfully generated</div>
-	<br/>
-	<div class="col-sm-12 column leftMargin">
-		<label for="googleCloudBucketName">Google Cloud Bucket</label>
-		<input
-			type="text" class="form-control fieldWidth" name="googleCloudBucketName" th:value="${googleCloudBucketName}"
-			id="googleCloudBucketName" placeholder="Enter Google Cloud Bucket Name" />
-	</div>
-	<br/>
-	<div class="col-sm-12 column leftMargin">
-		<label for="googleCloudPath">Endpoint Path:</label>
-		<input
-			type="text" class="form-control fieldWidth"
-			th:value="${googleCloudPath}"
-			name="googleCloudPath" id="googleCloudPath"
-			placeholder="Enter Google Cloud Endpoint Path" />
-	</div>
-</th:block>
-
-<th:block th:fragment="boxCommonBlock">
-	<div th:if="${authorizedBox != null}" class="alert-success" style="margin-top: 10px"><i class="fa fa-check">&nbsp;</i>Access Token successfully generated</div>
-	<br/>
-	<!-- The name of Box container is MyBox -->
-	<input type="hidden" name="boxContainerName" id="boxContainerName"
-		th:value="MyBox" />
-	<div class="col-sm-12 column leftMargin">
-		<label for="boxPath">Endpoint Path:</label>
-		<input
-			type="text" class="form-control fieldWidth"
-			th:value="${boxPath}"
-			name="boxPath" id="boxPath"
-			placeholder="Enter Box Endpoint Path" />
-	</div>
-</th:block>
-
-<th:block th:fragment="asperaBlock">
-	<div id="asperaDiv" style="display: none;">
-		<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center; margin-bottom: 10px;">
-			<label for="asperaBucketName" style="min-width: 220px; margin-bottom: 0;">Aspera Destination Directory:</label>
-			<div style="flex: 1;">
-				<div th:if="${asperaBucketName == 'test'}" id="oneOption" style="margin-bottom: 0;">
-					<select name="asperaBucketName" id="asperaBucketName" class="form-control fieldWidth fieldMargin">
-						<option th:value="test" th:text="test" selected="selected"></option>
-					</select>
-				</div>
-				<div th:if="${asperaBucketName != 'test'}"  id="multipleOption" style="margin-bottom: 0;">
-					<select name="asperaBucketName" id="asperaBucketName" class="form-control fieldWidth fieldMargin">
-						<option th:value="${asperaBucketName}" th:text="${asperaBucketName}" selected="selected"></option>
-						<option th:value="test" th:text="test" ></option>
-					</select>
-				</div>
-			</div>
-		</div>
-		<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center; margin-bottom: 10px;">
-			<label for="asperaUser" style="min-width: 220px; margin-bottom: 0;">Aspera Account User:</label>
-			<input
-				type="text" class="form-control fieldWidth fieldMargin"
-				th:value="${asperaUser}"
-				name="asperaUser" id="asperaUser"
-				placeholder="Enter User" style="margin-left: 10px;" />
-		</div>
-		<input type="hidden" name="asperaPath" id="asperaPath"
-				th:value="${asperaPath}" />
-		<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center; margin-bottom: 10px;">
-			<label for="asperaPassword" style="min-width: 220px; margin-bottom: 0;">Aspera Account Password:</label>
-			<input
-				type="password" autocomplete="secret-access-key" class="form-control fieldWidth  fieldMargin"
-				th:value="${asperaPassword}"
-				name="asperaPassword" id="asperaPassword"
-				placeholder="Enter Aspera Password" style="margin-left: 10px;" />
-		</div>
-		<div class="col-sm-12 column leftMargin" style="display: flex; align-items: center;">
-			<label for="asperaHost" style="min-width: 220px; margin-bottom: 0;">Aspera Host:</label>
-			<input
-				type="text" class="form-control fieldWidth"
-				th:value="${asperaHost}"
-				name="asperaHost" id="asperaHost"
-				placeholder="Enter Aspera Host" style="margin-left: 10px;" />
-		</div>
-	</div>
-</th:block>
+<!-- Existing content below here -->
